Update to Factorio 1.1

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.0
+Date: 12/12/2020
+  Features:
+    - Update to Factorio 1.1
+---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 04/10/2020
   Bugfixes:
